--- a/app.css
+++ b/app.css
@@ -11,20 +11,16 @@
     body {
       margin: 0;
       font-family: "Poppins", sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
+      background: url('9, 2026, 09_48_49 PM.png') no-repeat center center fixed;
       background-size: cover;
-      /* background: linear-gradient(45deg, rgba(139, 176, 223, 1) 0%, rgba(253, 202, 196, 1) 50%, rgba(248, 223, 172, 1) 100%); */
       color: #333;
-      /* background: var(--soft); */
     }
 
     /* HERO */
     .hero {
       position: relative;
-      height: 70vh;
-      /* width: 100%;
-      background: url("banner.jpg") center center no-repeat;
-      background-size: cover; */
+      height: 39vh;
+      width: 100%;
       display: flex;
       align-items: flex-end;
     }
@@ -47,6 +43,12 @@
       opacity: 0.95;
     }
 
+    #sub-title {
+      font-size: 1.5rem;
+      color: var(--brown);
+      text-align: center;
+    }
+
     /* SECTIONS */
     section {
       background: #FCE9D3;
@@ -58,7 +60,7 @@
       border: #FAEADB 2px solid;
     }
 
-    h2{
+    h1{
         font-family: "Pacifico", cursive;
         color: var(--brown);
         text-align: center;
@@ -71,7 +73,15 @@
         color: var(--brown);
         text-align: center;
         margin-bottom: 1rem;
-        font-size: 1.5rem;
+        font-size: 1.7rem;
+    }
+
+        h2{
+        font-family: "Pacifico", cursive;
+        color: var(--brown);
+        text-align: center;
+        margin-bottom: 1rem;
+        font-size: 1.7rem;
     }
 
     ul {
@@ -214,7 +224,12 @@
         gap: 1rem;
       }
 
-      .hero {
-        height: 80vh;
-      }
+      
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: url('9, 2026, 09_48_49 PM.png');
+      background-size: cover;
+      color: #333;
+    }
     }
