--- a/app.css
+++ b/app.css
@@ -10,7 +10,6 @@
 
     body {
       margin: 0;
-      font-family: "Poppins", sans-serif;
       background: url('9, 2026, 09_48_49 PM.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
@@ -57,11 +56,10 @@
       padding: 1.6rem;
       border-radius: 22px;
       box-shadow: 0 18px 40px rgba(0,0,0,0.06);
-      border: #FAEADB 2px solid;
+      border: #EE5A93 4px solid;
     }
 
     h1{
-        font-family: "Pacifico", cursive;
         color: var(--brown);
         text-align: center;
         margin-bottom: 1rem;
@@ -69,15 +67,6 @@
     }
 
     h3{
-        font-family: "Pacifico", cursive;
-        color: var(--brown);
-        text-align: center;
-        margin-bottom: 1rem;
-        font-size: 1.7rem;
-    }
-
-        h2{
-        font-family: "Pacifico", cursive;
         color: var(--brown);
         text-align: center;
         margin-bottom: 1rem;
@@ -90,13 +79,28 @@
       margin: 0;
     }
 
+    .grid-title {
+      font-family: Arial, sans-serif;
+        color: var(--brown);
+        text-align: center;
+        margin-bottom: 1rem;
+        font-size: 1.7rem;
+    } 
+
     li {
       padding: 0.6rem 0;
-      border-bottom: 1px dashed #e6d8cc;
       font-weight: bolder;
       font-size: 1.6rem;
       color: #7D579D !important;
-      font-family: "Pacifico", cursive;
+      font-family: Arial, sans-serif;
+    }
+
+    .underline {
+      border-bottom: 2px solid #EE5A93;
+    } 
+
+    .price-list > ul > li {
+      border-bottom: none !important;
     }
 
     li:last-child { border-bottom: none; }
@@ -115,9 +119,11 @@
 
     .caption {
       text-align: center;
+      font-weight: bolder;
       font-size: 0.95rem;
       margin-top: 0.6rem;
-      color: #666;
+      color: #7D579D !important;
+      font-family: Arial, sans-serif;
     }
 
     /* PRICE LIST */
@@ -143,15 +149,18 @@
     }
 
     .price-list {
+      font-family: Arial, sans-serif;
       margin-top: 1.4rem;
       animation: fadeUp 0.4s ease forwards;
     }
 
     .price-note {
       margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #777;
+      font-size: 1rem;
+      color: #7D579D !important;
+      font-family: Arial, sans-serif;
       font-style: italic;
+      font-weight: bolder;
     }
 
     .hidden {
@@ -227,7 +236,6 @@
       
     body {
       margin: 0;
-      font-family: "Poppins", sans-serif;
       background: url('9, 2026, 09_48_49 PM.png');
       background-size: cover;
       color: #333;
